[tool.poetry]
name = "cracking-coding-interview"
version = "0.1.0"
description = ""
authors = ["Jason Adam <22adamj22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.3"
bandit = "^1.6.2"
mypy = "^0.782"
black = "^20.8b1"
isort = "^5.5.3"
pytest = "^6.0.2"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
