[tool.poetry]
name = "cracking-coding-interview"
version = "0.1.0"
description = ""
authors = ["jason-adam <22adamj22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
isort = "^5.6.4"
pytest = "^6.2.1"
yapf = "^0.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
